syntax = "proto3";

package api;

option go_package = ".;storage";

// import "k8s.io/api/core/v1/generated.proto";

service Storage {
  rpc GetStorageParams(GetStorageParamsRequest)
      returns (GetStorageParamResponse);
  rpc GetRenderedStorageManifest(CreateStorageRequest)
      returns (CreateStorageResponse);
}

message GetStorageParamsRequest { string storageType = 1; }

message GetStorageParamResponse {

  string storageType = 1;
  string parameters = 2;
}

message CreateStorageRequest {
  string storageType = 1;
  string namespace = 2;

  map<string, string> parameters = 3;
}

message CreateStorageResponse {
  string manifest = 1;
}
